adding new api for return request accept
